# group-adjust

./: README.md  pyproject.toml
src/: group_adjust.py
tests/: test_group_adjust.py
